--- a/css/coc.css
+++ b/css/coc.css
@@ -685,6 +685,10 @@
   max-width: 100%;
 }
 
+.coc .weapon-image {
+  background-image: url("../ui/coc/weapon.png");
+}
+
 .coc.actor {
   /* ----------------------------------------- */
   /*  Layout                                   */
