--- a/templates/actors/parts/stats/actor-attacks.hbs
+++ b/templates/actors/parts/stats/actor-attacks.hbs
@@ -21,11 +21,11 @@
                 <input name="data.attacks.{{id}}.label" type="hidden" value="{{attack.label}}" data-dtype="String"/>
                 <input name="data.attacks.{{id}}.key" type="hidden" value="{{attack.key}}" data-dtype="String"/>
             </div>
-            <div class="flex1 center cell readonly">
+            <div class="flex1 center cell">
                 {{#if (isNull attack.base)}}
-                    <input class="field-value" name="data.attacks.{{id}}.base" readonly="true" type="text" value="" placeholder="Base" data-dtype="Number"/>
+                    <input class="field-value" name="data.attacks.{{id}}.base" type="text" value="" placeholder="Base" data-dtype="Number"/>
                 {{else}}
-                    <input class="field-value" name="data.attacks.{{id}}.base" readonly="true" type="text" value="{{numberFormat attack.base decimals=0 sign=true}}" placeholder="Base" data-dtype="Number"/>
+                    <input class="field-value" name="data.attacks.{{id}}.base" type="text" value="{{numberFormat attack.base decimals=0 sign=true}}" placeholder="Base" data-dtype="Number"/>
                 {{/if}}
             </div>
             <div class="flex1 center cell">
