--- a/templates/actors/parts/stats/actor-resources.hbs
+++ b/templates/actors/parts/stats/actor-resources.hbs
@@ -23,8 +23,8 @@
     <div class="flex3 center cell">
         <input class="field-value" name="data.attributes.fp.value" type="text" value="{{actor.data.attributes.fp.value}}" placeholder="Value" data-dtype="Number"/>
     </div>
-    <div class="flex3 center cell readonly">
-        <input class="field-value" name="data.attributes.fp.base" readonly="true" type="text" value="{{actor.data.attributes.fp.base}}" placeholder="Base" data-dtype="Number"/>
+    <div class="flex3 center cell">
+        <input class="field-value" name="data.attributes.fp.base" type="text" value="{{actor.data.attributes.fp.base}}" placeholder="Base" data-dtype="Number"/>
     </div>
     <div class="flex3 center cell">
         <input class="field-value" name="data.attributes.fp.bonus" type="text" value="{{actor.data.attributes.fp.bonus}}" placeholder="Bonus" data-dtype="Number"/>
@@ -42,8 +42,8 @@
     <div class="flex3 center cell">
         <input class="field-value" name="data.attributes.mp.value" type="text" value="{{actor.data.attributes.mp.value}}" placeholder="Value" data-dtype="Number"/>
     </div>
-    <div class="flex3 center cell readonly">
-        <input class="field-value" name="data.attributes.mp.base" type="text" readonly="true" value="{{actor.data.attributes.mp.base}}" placeholder="Base" data-dtype="Number"/>
+    <div class="flex3 center cell">
+        <input class="field-value" name="data.attributes.mp.base" type="text" value="{{actor.data.attributes.mp.base}}" placeholder="Base" data-dtype="Number"/>
     </div>
     <div class="flex3 center cell">
         <input class="field-value" name="data.attributes.mp.bonus" type="text" value="{{actor.data.attributes.mp.bonus}}" placeholder="Bonus" data-dtype="Number"/>
