--- a/scss/utils/_typography.scss
+++ b/scss/utils/_typography.scss
@@ -64,7 +64,8 @@
 
 $font-primary: 'Signika', sans-serif;
 $font-secondary: 'MyriadPro', sans-serif;
-$font-tertiary: 'ChN1Regular', cursive;
+$font-tertiary: Futura, sans-serif;
+$font-deco: 'ChN1Regular', cursive;
 
 .strong{
   font-weight: bold;
