--- a/scss/components/_item.scss
+++ b/scss/components/_item.scss
@@ -12,5 +12,134 @@
     overflow: hidden;
     background-image: url("../ui/coc/header.png");
     background-repeat: repeat;
+
+
+    .sheet-header {
+      box-shadow: 0 10px 10px gray;
+
+      img {
+        &.profile {
+          flex: 0 0 100px;
+          max-width: 100px;
+          height: 100px;
+          object-fit: contain;
+          border: none;
+        }
+      }
+
+      .item-subtitle {
+        h4.item-type {}
+        .item-status{}
+      }
+
+    .header-details {
+        height:140px;
+        h1.charname {
+          input[type=text]{
+            font-family: Futura;
+            color:white;
+            border: none;
+            box-shadow: none;
+            background-color: transparent;
+          }
+        }
+
+      .item-subtitle {
+        flex: 0 0 150px;
+        //flex: 0 0 80px;
+        height: 60px;
+        margin: 0;
+        padding: 5px;
+        text-align: right;
+        color: goldenrod;
+
+        .item-type {
+          font-size: 24px;
+          line-height: 26px;
+          margin: 0;
+        }
+
+        .item-status {
+          font-size: 16px;
+          line-height: 24px;
+        }
+      }
+/*
+      .summary {
+        flex: 0 0 100%;
+        height: 40px;
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        border-top: $borderGroove;
+        border-bottom: none;
+
+        li {
+          height: calc(100% - 6px);
+          float: left;
+          margin: 2px 0;
+          padding: 0;
+          border-right: $borderGroove;
+          line-height: 34px;
+          color: $lightGreen;
+
+          &:last-child {
+            border-right: none;
+          }
+
+          input {
+            color: $lightGreen;
+          }
+        }
+      }
+*/
+    }
+    }
+
+
+    nav.sheet-navigation {
+      margin-top:-28px;
+      border: none;
+      &.tabs {
+        color: white;
+        text-align: center;
+        border: none;
+        .item {
+          @include ellipsis;
+          padding: 5px;
+          border: 1px solid $c-border;
+          margin: 0;
+          height: 28px;
+          box-shadow: 0 0 10px $c-shadow inset;
+          /*padding: 3px 3px 0 3px;*/
+          background:rgba(0,0,0,0.05);
+          &:hover {
+            background:rgba(0,0,0,0.2);
+            text-shadow: none;
+          }
+          &.active {
+            border: 1px inset $c-border;
+            background:rgba(0,0,0,0.2);
+            text-shadow: none;
+          }
+        }
+      }
+
+    }
+
+    .sheet-body {
+      background: white;
+      .tab {
+        background: lightgray;
+        padding:10px;
+        height: calc(100% - 30px);
+        min-height: calc(100% - 40px);
+        max-height: calc(100% - 40px);
+        //width: 100%;
+        //min-width: 100%;
+        //max-width: 100%;
+        overflow: auto;
+      }
+    }
   }
 }
