--- a/templates/actors/parts/stats/actor-stats.hbs
+++ b/templates/actors/parts/stats/actor-stats.hbs
@@ -6,7 +6,7 @@
     <div class="flex1 layout">
         <!-- ATTAQUES -->
         {{> "systems/coc/templates/actors/parts/stats/actor-attacks.hbs"}}
-        <div class="flexrow"><div class="flex1 spacer"></div></div>
+<!--        <div class="flexrow"><div class="flex1 spacer"></div></div>-->
         <!-- INIT -->
         {{> "systems/coc/templates/actors/parts/stats/actor-init.hbs"}}
     </div>
