--- a/templates/items/parts/details/capacity-details.hbs
+++ b/templates/items/parts/details/capacity-details.hbs
@@ -1,7 +1,7 @@
 <h3 class="form-header">{{localize "COC.ui.properties"}}</h3>
 <input class="field-value" name="data.key" type="hidden" value="{{data.key}}" placeholder="{{ localize "COC.ui.key" }}" data-dtype="String">
 <div class="form-group stacked">
-    <label>Proriétés</label>
+    <label>Propriétés</label>
     <div class="form-fields">
         <label class="checkbox">
             <input type="checkbox" name="data.limited" {{checked data.limited}}> {{localize "COC.ui.limited"}}
