--- a/scss/coc.scss
+++ b/scss/coc.scss
@@ -5,7 +5,7 @@
 @import 'utils/variables';
 
 /* Global styles */
-//@import 'global/grid';
+@import 'global/grid';
 @import 'global/flex';
 @import 'global/table';
 @import 'global/chat';
