--- a/templates/items/parts/details/item-details.hbs
+++ b/templates/items/parts/details/item-details.hbs
@@ -8,12 +8,9 @@
                 <option value="armor">{{localize "COC.category.armor"}}</option>
                 <option value="melee">{{localize "COC.category.melee"}}</option>
                 <option value="ranged">{{localize "COC.category.ranged"}}</option>
-                <option value="shield">{{localize "COC.category.shield"}}</option>
-                <option value="spell">{{localize "COC.category.spell"}}</option>
-                <option value="jewel">{{localize "COC.category.jewel"}}</option>
                 <option value="ammunition">{{localize "COC.category.ammunition"}}</option>
                 <option value="container">{{localize "COC.category.container"}}</option>
-                <option value="mount">{{localize "COC.category.mount"}}</option>
+                <option value="vehicle">{{localize "COC.category.vehicle"}}</option>
                 <option value="trapping">{{localize "COC.category.other"}}</option>
             {{/select}}
         </select>
