--- a/scss/components/_actor.scss
+++ b/scss/components/_actor.scss
@@ -133,7 +133,70 @@
         }
         &.combat {}
         &.inventory {}
-        &.capacities {}
+        &.capacities {
+          overflow: auto;
+
+          .path-list {
+            box-shadow: 0 4px 3px -3px gray;
+            margin: 0 0 5px 0;
+            padding: 3px;
+            max-height: 205px;
+            overflow: hidden;
+
+            .grid {
+              max-height: 150px;
+              overflow: auto;
+            }
+
+            &.encounter {
+              min-height: 100px;
+              height: 100px;
+              max-height: 100px;
+              overflow: hidden;
+
+              .grid {
+                min-height: 100px;
+                height: 100px;
+                max-height: 100px;
+                overflow: auto;
+              }
+            }
+
+          }
+
+          .capacity-list {
+            min-height:calc(100% - 220px);
+            height:calc(100% - 220px);
+            max-height:calc(100% - 220px);
+            overflow: auto;
+            &.p0{
+              min-height:calc(100% - 15px);
+              height:calc(100% - 15px);
+              max-height:calc(100% - 15px);
+            }
+            &.p1{
+              min-height:calc(100% - 120px);
+              height:calc(100% - 120px);
+              max-height:calc(100% - 120px);
+            }
+            &.p2{
+              min-height:calc(100% - 145px);
+              height:calc(100% - 145px);
+              max-height:calc(100% - 145px);
+            }
+            &.p3{
+              min-height:calc(100% - 170px);
+              height:calc(100% - 170px);
+              max-height:calc(100% - 170px);
+            }
+            &.p4{
+              min-height:calc(100% - 195px);
+              height:calc(100% - 195px);
+              max-height:calc(100% - 195px);
+            }
+          }
+        }
+
         &.stats {}
       }
     }
