--- a/scss/components/_item.scss
+++ b/scss/components/_item.scss
@@ -139,6 +139,43 @@
         //min-width: 100%;
         //max-width: 100%;
         overflow: auto;
+
+        .item-properties {
+          flex: 0 0 150px;
+          margin: 5px 5px 5px 0;
+          padding-right: 5px;
+          border-right: $borderGroove;
+
+          .form-group {
+            margin: 0;
+
+            label {
+              line-height: 20px;
+            }
+
+            input {
+              text-align: right;
+            }
+          }
+
+          .properties-list {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+
+            li {
+              margin: 3px 0;
+              padding: 0 2px;
+              background: rgba(0, 0, 0, 0.05);
+              border: $borderGroove;
+              text-align: center;
+              font-size: 12px;
+              line-height: 18px;
+            }
+          }
+
+        }
+
       }
     }
   }
