--- a/scss/components/_item.scss
+++ b/scss/components/_item.scss
@@ -51,7 +51,7 @@
         margin: 0;
         padding: 5px;
         text-align: right;
-        color: goldenrod;
+        color: $colorGold;
 
         .item-type {
           font-size: 24px;
