--- a/scss/utils/_colors.scss
+++ b/scss/utils/_colors.scss
@@ -38,6 +38,8 @@ $colorFumble : red;
 $colorDamage : orangered;
 $colorRoll : darkslategrey;
 
+$colorGold : #caad27;
+
 /* ----------------------------------------- */
 /*  Premade colors                           */
 /* ----------------------------------------- */
