--- a/templates/actors/parts/stats/actor-attacks.hbs
+++ b/templates/actors/parts/stats/actor-attacks.hbs
@@ -51,13 +51,17 @@
     <div class="flex2 center cell-header">
         <div class="field-label ellipsis">{{ localize "COC.ui.sc" }}</div>
     </div>
-    <div class="flex3 center">
-        <select name="data.attacks.magic.stat" data-type="String" style="font-size:12px; width:100%">
+    <div class="flex1 cell center">
+        <select class="field-value" name="data.attacks.magic.stat" data-type="String" style="font-size:12px; width:100%">
             {{#select data.attacks.magic.stat}}
                 <option value="@stats.int.mod">{{localize "COC.stats.int.abbrev"}}</option>
                 <option value="@stats.wis.mod">{{localize "COC.stats.wis.abbrev"}}</option>
                 <option value="@stats.cha.mod">{{localize "COC.stats.cha.abbrev"}}</option>
             {{/select}}
         </select>
+    </div>
+    <div class="flex1 center">
+    </div>
+    <div class="flex1 center">
     </div>
 </div>
