--- a/templates/actors/parts/combat/actor-combat-item.hbs
+++ b/templates/actors/parts/combat/actor-combat-item.hbs
@@ -19,7 +19,7 @@
                 <input class="field-value weapon-critrange" name="data.weapons.{{id}}.critrange" type="text" value="{{critrange}}" placeholder="{{ localize 'COC.ui.critrange' }}" data-dtype="String"/>
             {{/if}}
         </div>
-        <div class="item-detail">
+        <div class="item-damage">
             <input class="field-value weapon-dmg" name="data.weapons.{{id}}.dmg" type="text" value="{{dmg}}" placeholder="{{ localize 'COC.weapons.dmg.abbrev' }}" data-dtype="String"/>
         </div>
         <div class="item-controls">
