--- a/templates/actors/parts/inventory/actor-inventory.hbs
+++ b/templates/actors/parts/inventory/actor-inventory.hbs
@@ -2,6 +2,7 @@
     {{!#if (notEmpty (getItems actor.items))}}
         <li class="inventory-header flexrow">
             <h3 class="item-name flexrow">{{localize "COC.ui.equipment"}}</h3>
+            <div class="item-subtype"></div>
             <div class="item-detail">{{localize "COC.ui.qty"}}</div>
             <div class="item-detail">{{localize "COC.ui.equip"}}</div>
             <div class="item-controls">
