--- a/templates/actors/parts/stats/actor-stats.hbs
+++ b/templates/actors/parts/stats/actor-stats.hbs
@@ -32,3 +32,13 @@
         {{> "systems/coc/templates/actors/parts/stats/actor-resources.hbs"}}
     </div>
 </div>
+<div class="flexrow no-wrap">
+    <div class="flex1 layout">
+        <!-- INJURIES -->
+        {{> "systems/coc/templates/actors/parts/stats/actor-injuries.hbs"}}
+    </div>
+    <div class="flex1 layout">
+        <!-- MADNESS -->
+        {{> "systems/coc/templates/actors/parts/stats/actor-madness.hbs"}}
+    </div>
+</div>
