--- a/scss/components/base/_actor.scss
+++ b/scss/components/base/_actor.scss
@@ -126,6 +126,23 @@ $headerColor:black;
 
             }
             &.combat {
+              .inventory-list {
+                .item-list {
+                  .item {
+                    .item-subtype {
+                      //font-size: 10px;
+                      flex: 0 1 100px;
+                      font-size: 12px;
+                      color: $colorTan;
+                      text-align: center;
+                      border-right: 1px solid $colorFaint;
+                      word-break: break-word;
+                      @include ellipsis;
+                    }
+                  }
+                }
+              }
+
               .weapon {
                 .item-name {
                   padding-top: 2px;
