--- a/scss/components/base/_item.scss
+++ b/scss/components/base/_item.scss
@@ -79,6 +79,7 @@ $borderColor:#caad27;
         overflow: auto;
 
         .item-properties {
+          background-color: #cd071e;
           flex: 0 0 150px;
           margin: 5px 5px 5px 0;
           padding-right: 5px;
@@ -112,6 +113,22 @@ $borderColor:#caad27;
             }
           }
 
+        }
+
+        .editor {
+          height: 100%;
+          min-height: 100%;
+          max-height: 100%;
+          .editor-content {
+            height: 100%;
+            min-height: 100%;
+            max-height: 100%;
+          }
+          .tox-tinymce{
+            height: 100%;
+            min-height: 100%;
+            max-height: 100%;
+          }
         }
 
       }
