--- a/scss/components/cocth/_actor.scss
+++ b/scss/components/cocth/_actor.scss
@@ -139,6 +139,33 @@ $resourcesColor:#6f4b93;
 
             }
             &.combat {
+              .inventory-list {
+                .item-list {
+                  .item {
+                    //.item-name {
+                    //  flex: 0 0 120px;
+                    //  //font-size: 12px;
+                    //  h4{
+                    //    text-align: left;
+                    //    word-break: break-word;
+                    //    @include ellipsis;
+                    //  }
+                    //}
+
+                    .item-subtype {
+                      //font-size: 10px;
+                      flex: 0 1 100px;
+                      font-size: 12px;
+                      color: $colorTan;
+                      text-align: center;
+                      border-right: 1px solid $colorFaint;
+                      word-break: break-word;
+                      @include ellipsis;
+                    }
+                  }
+                }
+              }
+
               .weapon {
                 .item-name {
                   padding-top: 2px;
@@ -256,8 +283,23 @@ $resourcesColor:#6f4b93;
         }
         .drop-field {
           background-color: rgba(0, 0, 0, 0.1);
-          .field-value {
-            background: transparent;
+          .drop-item {
+            margin-left: 1px;
+            padding-top: 5px;
+            height: 26px;
+            cursor:pointer;
+          }
+          .item {
+            padding-top: 3px;
+            .item-control {
+              color: $c-darkbrown;
+              visibility: hidden;
+              flex: 0 0 18px;
+              border:1px solid transparent;
+            }
+          }
+          &:hover > .item > .item-control {
+            visibility: visible;
           }
         }
       }
