--- a/templates/actors/actor-sheet.hbs
+++ b/templates/actors/actor-sheet.hbs
@@ -29,7 +29,12 @@
                     {{> "systems/coc/templates/actors/parts/stats/actor-stats.hbs"}}
                 </div>
                 <div class="tab combat" data-group="primary" data-tab="combat">
-                    {{> "systems/coc/templates/actors/parts/combat/actor-combat.hbs"}}
+                    {{#if (equals actor.type "character")}}
+                        {{> "systems/coc/templates/actors/parts/combat/character-combat.hbs"}}
+                    {{/if}}
+                    {{#if (equals actor.type "npc")}}
+                        {{> "systems/coc/templates/actors/parts/combat/actor-combat.hbs"}}
+                    {{/if}}
                 </div>
                 <div class="tab inventory" data-group="primary" data-tab="inventory">
                     {{> "systems/coc/templates/actors/parts/inventory/actor-inventory.hbs"}}
