--- a/templates/actors/parts/combat/actor-combat.hbs
+++ b/templates/actors/parts/combat/actor-combat.hbs
@@ -4,9 +4,9 @@
         <h3 class="item-name flexrow">Attaques</h3>
         <div class="item-detail">Mod</div>
         <div class="item-detail">Critique</div>
-        <div class="item-detail">DM</div>
+        <div class="item-damage">DM</div>
         <div class="item-controls">
-            <a class="item-control item-create weapon-add" title="Ajouter une attaque"><i class="fas fa-plus"></i>&nbsp; Add</a>
+            <a class="item-control item-create weapon-add" title="Ajouter une attaque"><i class="fas fa-plus"></i>&nbsp; Aj.</a>
             <!--                <a class="item-control" title="Ajouter une attaque"><i class="fas fa-plus"></i>&nbsp;Add</a>-->
         </div>
         <!--                <a class="item-control weapon-add btn" title="Ajouter une attaque" style="padding:3px"><i class="fas fa-plus"></i></a>-->
