--- a/templates/actors/parts/stats/actor-init.hbs
+++ b/templates/actors/parts/stats/actor-init.hbs
@@ -9,6 +9,9 @@
         <div class="field-label">{{ localize 'COC.attributes.bonus.abbrev' }}</div>
     </div>
     <div class="flex1 center">
+        <div class="field-label">{{ localize 'COC.attributes.penalty.abbrev' }}</div>
+    </div>
+    <div class="flex1 center">
         <div class="field-label">{{ localize 'COC.attributes.value.abbrev' }}</div>
     </div>
 </div>
@@ -27,6 +30,9 @@
     {{/if}}
     <div class="flex1 center cell">
         <input class="field-value" name="data.attributes.init.bonus" type="text" value="{{actor.data.attributes.init.bonus}}" placeholder="{{ localize 'COC.attributes.bonus.abbrev' }}" data-dtype="Number"/>
+    </div>
+    <div class="flex1 center cell readonly">
+        <input class="field-value" name="data.attributes.init.penalty" readonly="true" type="text" value="{{actor.data.attributes.init.penalty}}" placeholder="{{ localize 'COC.attributes.penalty.abbrev' }}" data-dtype="Number"/>
     </div>
     <div class="flex1 center cell readonly">
         <input class="field-value" name="data.attributes.init.value" readonly="true" type="text" value="{{actor.data.attributes.init.value}}" placeholder="{{ localize 'COC.attributes.value.abbrev' }}" data-dtype="Number"/>
