--- a/scss/components/_common.scss
+++ b/scss/components/_common.scss
@@ -29,9 +29,6 @@
 }
 
 .editor {
-  width: 100%;
-  min-width: 100%;
-  max-width: 100%;
   height: 100%;
   min-height: 100%;
   max-height: 100%;
@@ -39,16 +36,11 @@
     height: 100%;
     min-height: 100%;
     max-height: 100%;
-    width: 100%;
-    min-width: 100%;
-    max-width: 100%;
   }
   .tox-tinymce{
+    background-color: white;
     height: 100%;
     min-height: 100%;
     max-height: 100%;
-    width: 100%;
-    min-width: 100%;
-    max-width: 100%;
   }
 }
