--- a/templates/items/item-sheet.hbs
+++ b/templates/items/item-sheet.hbs
@@ -29,7 +29,7 @@
     </nav>
     {{!-- Sheet Body --}}
     <section class="sheet-body">
-        <div class="tab flexrow active" data-group="primary" data-tab="description">
+        <div class="tab flexrow active no-wrap" data-group="primary" data-tab="description">
             {{> "systems/coc/templates/items/parts/properties/item-properties.hbs"}}
             {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
         </div>
